@@ -79,8 +79,8 @@ names are mapped to languages according to the following default mappings
 .B BETA
 *.bet
 .TP 9
-.B COBOL
-*.cob *.COB
+.B Cobol
+*.cbl *.cob *.CBL *.COB
 .TP 9
 .B Eiffel
 *.e
@@ -959,8 +959,23 @@ Cobol
 .RS 5
 .PD 0
 .TP 4
+.I d
+data items
+.TP 4
+.I f
+file descriptions (FD, SD, RD)
+.TP 4
+.I g
+group items
+.TP 4
 .I p
 paragraphs
+.TP 4
+.I P
+program ids
+.TP 4
+.I s
+sections
 .RE
 .PD 1
 .RE
